--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,10 +3,39 @@
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
+	/* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+}
+:root.theme-dark {
+	--accent-color: #ff0070;
+	--text-color: #f1b2ce;
+	--main-title-color: #db00ff;
+	--bg-cover: #000028;
+	--text-color-alt: #000028;
+	--font-family-base: 'IBM Plex mono', sans-serif;
+	--shadow: 4px 4px 0 var(--accent-color);
+	--padding-y: 20px;
+	--paddind-x: 20px;
+}
+
+@media (prefers-color-scheme: dark) {
+	:root {
+		--accent-color: #ff0070;
+		--text-color: #f1b2ce;
+		--main-title-color: #db00ff;
+		--bg-cover: #000028;
+		--text-color-alt: #000028;
+		--font-family-base: 'IBM Plex mono', sans-serif;
+		--shadow: 4px 4px 0 var(--accent-color);
+		--padding-y: 20px;
+		--paddind-x: 20px;
+    
+	}
+}
+
+.theme_dark.page {
+	background-image: url('../images/cover-image-dark.png');
 }
