--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,13 +3,20 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  min-inline-size: 375px;
-  max-inline-size: 1440px;
-  margin: 0 auto;
+	min-inline-size: 375px;
+	max-inline-size: 1440px;
+	margin: 0 auto;
+	background-color: var(--bg-cover);
+	font-family: var(--font-family-base);
+	font-size: 18px;
+	padding-inline: var(--paddind-x);
+	color: var(--text-color);
+	font-weight: normal;
+	line-height: 23.4px;
 }
 
 h1,
@@ -19,24 +26,41 @@ h4,
 h5,
 h6,
 p {
-  margin: 0;
+	margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-weight: bold;
 }
 
 ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
 picture {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 button,
 a {
-  color: currentColor;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
+	color: currentColor;
+	font-family: inherit;
+	font-size: inherit;
+	line-height: inherit;
+}
+
+/* Сбрасываем стили у кнопок */
+button{
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
