--- a/styles/light.css
+++ b/styles/light.css
@@ -3,10 +3,23 @@
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
+	/* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+}
+
+:root.theme-light {
+}
+
+/* Остальные стили */
+
+@media (prefers-color-scheme: light) {
+	:root {
+	}
+}
+
+.theme_light.page {
+	background-image: url('../images/cover-image-light.png');
 }
