--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,16 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+	--accent-color: #ff0070;
+	--text-color: #f1b2ce;
+	--main-title-color: #db00ff;
+	--bg-cover: #000028;
+	--text-color-alt: #000028;
+	--font-family-base: 'IBM Plex mono', sans-serif;
+	--shadow: 4px 4px 0 var(--accent-color);
+	--outline-switch: 1px solid rgba(255, 0, 112, 0.4);
+	--border-corner-color:#ff0070;
+	--padding-y: 20px;
+	--paddind-x: 20px;
+}
