полный адаптив Header на все устройства

--- a/styles/light.css
+++ b/styles/light.css
@@ -23,3 +23,7 @@
 .theme_light.page {
 	background-image: url('../images/cover-image-light.png');
 }
+
+.theme_light .header__decoration {
+	display: none;
+}
