--- a/styles/light.css
+++ b/styles/light.css
@@ -10,20 +10,42 @@
   */
 }
 
+.theme_light.page {
+	background-image: url('../images/cover-image-light.png');
+}
+
 :root.theme-light {
+	--accent-color: #ff8dcb;
+	--text-color: #353430;
+	--text-color-alt: #353430;
+	--main-title-color: #ffc2e6;
+	--bg-cover: #fff1f7;
+	--main-color: #353430;
+	--shadow: 4px 4px 0 var(--accent-color);
+	--outline-switch: 1px solid rgba(53, 52, 48, 0.4);
 }
 
 /* Остальные стили */
 
 @media (prefers-color-scheme: light) {
 	:root {
+		--accent-color: #ff8dcb;
+		--text-color: #353430;
+		--text-color-alt: #353430;
+		--main-title-color: #ffc2e6;
+		--bg-cover: #fff1f7;
+		--main-color: #353430;
+		--shadow: 4px 4px 0 var(--accent-color);
+		--outline-switch: 1px solid rgba(53, 52, 48, 0.4);
 	}
-}
-
-.theme_light.page {
-	background-image: url('../images/cover-image-light.png');
 }
 
 .theme_light .header__decoration {
 	display: none;
+}
+
+.header__theme-menu-button_active {
+	--outline-switch: 1px solid rgb(53, 52, 48);
+	outline: var(--outline-switch);
+	pointer-events: none;
 }
