--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
+/* Общие стили */
+
 .page {
 	background-image: url(../images/cover-image.png);
 	background-size: cover;
@@ -30,6 +32,7 @@
 .title__3--normal {
 	font-weight: normal;
 }
+
 /* Header ================================ */
 
 .header {
@@ -74,6 +77,7 @@
 }
 
 /* Декорация header REC */
+
 .header__decoration {
 	position: absolute;
 	display: flex;
@@ -130,9 +134,9 @@
 	outline: none;
 	border-bottom: var(--outline-switch-opacity);
 }
-/* Header ==================================== */
 
 /* Адаптация Header */
+
 @media (max-width: 768px) {
 	.header__theme-menu {
 		justify-self: end;
@@ -154,29 +158,33 @@
 		font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 	}
 }
-/* Адаптация Header ====================================== */
 
-/*Умные мысли преследовали меня, но я бы побыстрее */
-/* info */
+/*Умные мысли преследовали меня, но я бы побыстрее ))) дальше бб*/
+
+/* Секция Info */
+
 .info {
 	padding-block: 60px;
 }
+
 .info__list {
 	display: flex;
 	flex-direction: column;
 	gap: 80px;
 }
-/* info общие ===================*/
+
 .info__card {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	gap: 20px;
 }
+
 .info__title {
 	grid-column: 1/2;
 	font-size: 18px;
 	line-height: 23.4px;
 }
+
 .info__segment {
 	display: flex;
 	flex-direction: column;
@@ -196,8 +204,6 @@
 	outline: 2px solid var(--text-color);
 }
 
-/* ======================================= */
-
 /* info нечетнык  ================================*/
 
 .info__item:nth-child(odd) .info__body {
@@ -206,7 +212,6 @@
 	flex-direction: column;
 	gap: 20px;
 }
-/* ==================================================== */
 
 /* info четных  ================================*/
 
@@ -219,9 +224,9 @@
 .info__item:nth-child(even) .info__segment {
 	flex: 0 1 calc((100% / 3));
 }
-/* =================================== */
 
 /* Адаптация info */
+
 @media (max-width: 768px) {
 	.info__item:nth-child(even) .info__body {
 		grid-column: 1/-1;
@@ -254,13 +259,16 @@
 }
 
 /* Секция Gallery */
+
 .gallery {
 	padding-block-start: 20px;
 	padding-block-end: 60px;
 }
+
 .gallery__title {
 	margin-block-end: 20px;
 }
+
 .gallery__grid {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
@@ -274,13 +282,16 @@
 	height: auto;
 	object-fit: cover;
 }
+
 .gallery__sunset {
 	grid-column: 1/3;
 }
+
 .gallery__ice-cream {
 	grid-column: 3/4;
 	grid-row: 1/-2;
 }
+
 .gallery__tape {
 	grid-column: 1/2;
 	grid-row: 2/-1;
@@ -291,6 +302,7 @@
 	grid-row: 3/-1;
 }
 
+/* Адаптация Gallery */
 @media (max-width: 768px) {
 	.gallery {
 		padding-block-start: 66px;
@@ -317,7 +329,9 @@
 		padding-block-end: 40px;
 	}
 }
+
 /* Footer */
+
 .footer {
 	position: relative;
 	height: 100vh;
@@ -352,8 +366,34 @@
 	font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
 }
 
+/* Адаптация Footer */
 @media (max-width: 480px) {
 	.footer__title {
 		font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 	}
 }
+/* ────────────────────────────────
+───────────────██████████───────
+──────────────████████████──────
+──────────────██────────██──────
+──────────────██▄▄▄▄▄▄▄▄▄█──────
+──────────────██▀███─███▀█────── 
+█─────────────▀█────────█▀──────
+██──────────────────█───────────
+─█──────────────██──────────────
+█▄────────────████─██──████
+─▄███████████████──██──██████ ──
+────█████████████──██──█████████
+─────────────████──██─█████──███
+──────────────███──██─█████──███
+──────────────███─────█████████
+──────────────██─────████████▀
+────────────────██████████
+────────────────██████████
+─────────────────████████
+──────────────────██████████▄▄
+────────────────────█████████▀
+─────────────────────████──███
+────────────────────▄████▄──██
+────────────────────██████───▀
+────────────────────▀▄▄▄▄▀ */
