--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,12 @@
 	box-sizing: border-box;
 }
 
+body,
+html {
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	min-inline-size: 375px;
 	max-inline-size: 1440px;
