--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
 	min-inline-size: 375px;
 	max-inline-size: 1440px;
 	margin: 0 auto;
+	padding: 0;
 	background-color: var(--bg-cover);
 	font-family: var(--font-family-base);
 	font-size: 18px;
