Исправление ошибок ревью№1

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -13,7 +13,7 @@
 	--outline-switch: 1px solid rgb(255, 0, 112);
 	--font-family-base: 'IBM Plex mono', sans-serif;
 	--shadow: 4px 4px 0 var(--accent-color);
-		--shadow-alt: 2px 2px 0 var(--accent-color);
+	--shadow-alt: 2px 2px 0 var(--accent-color);
 	--main-color: #ff0070;
 }
 
@@ -24,19 +24,26 @@
 		--main-title-color: #db00ff;
 		--bg-cover: #000028;
 		--text-color-alt: #000028;
-		--font-family-base: 'IBM Plex mono', sans-serif;
 		--outline-switch-opacity: 1px solid rgba(255, 0, 112, 0.4);
 		--outline-switch: 1px solid rgb(255, 0, 112);
 		--shadow: 4px 4px 0 var(--accent-color);
-			--shadow-alt: 2px 2px 0 var(--accent-color);
+		--shadow-alt: 2px 2px 0 var(--accent-color);
 		--main-color: #ff0070;
 	}
 
 	.page {
 		background-image: url('../images/cover-image-dark.png');
 	}
+
+	.header__decoration {
+		visibility: visible;
+	}
 }
 
 .theme_dark.page {
 	background-image: url('../images/cover-image-dark.png');
+}
+
+.theme_dark .header__decoration {
+	visibility: visible;
 }
