--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,7 @@ h3,
 h4,
 h5,
 h6 {
+	font-size: inherit;
 	font-weight: bold;
 }
 
@@ -71,4 +72,17 @@ button {
 
 img {
 	width: 100%;
+}
+
+body {
+	min-inline-size: 375px;
+	max-inline-size: 1440px;
+	margin: 0 auto;
+	padding: 0;
+	background-color: var(--bg-cover);
+	font-family: var(--font-family-base);
+	font-size: 18px;
+	color: var(--text-color);
+	font-weight: normal;
+	line-height: 23.4px;
 }
