--- a/styles/light.css
+++ b/styles/light.css
@@ -11,7 +11,7 @@
 	--bg-cover: #fff1f7;
 	--main-color: #353430;
 	--shadow: 4px 4px 0 var(--accent-color);
-  	--shadow-alt: 2px 2px 0 var(--accent-color);
+	--shadow-alt: 2px 2px 0 var(--accent-color);
 	--outline-switch-opacity: 1px solid rgba(53, 52, 48, 0.4);
 	--outline-switch: 1px solid rgb(53, 52, 48);
 }
@@ -25,7 +25,7 @@
 		--bg-cover: #fff1f7;
 		--main-color: #353430;
 		--shadow: 4px 4px 0 var(--accent-color);
-    --shadow-alt: 2px 2px 0 var(--accent-color);
+		--shadow-alt: 2px 2px 0 var(--accent-color);
 		--outline-switch-opacity: 1px solid rgba(53, 52, 48, 0.4);
 		--outline-switch: 1px solid rgb(53, 52, 48);
 	}
@@ -35,7 +35,7 @@
 	}
 
 	.header__decoration {
-		display: none;
+		visibility: hidden;
 	}
 }
 
