Отпрвака на ревью№2

--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,18 @@
 	color: var(--main-color);
 }
 
+.link {
+	text-shadow: var(--shadow-alt);
+}
+
+.link:hover {
+	border-bottom: 1px solid var(--text-color);
+}
+
+.link:focus-visible {
+	outline: 1px solid var(--text-color);
+}
+
 /* Header ================================ */
 
 .header {
@@ -84,6 +96,7 @@
 	line-height: 25px;
 	text-transform: uppercase;
 }
+
 .header__decoration::after {
 	content: '';
 	display: block;
@@ -163,22 +176,13 @@
 }
 
 /* Main */
+
 .main {
 	padding-inline: var(--paddind-x);
 }
 
-.main__link {
-	text-shadow: var(--shadow-alt);
-}
-
-.main__link:hover {
-	border-bottom: 1px solid var(--text-color);
-}
-
-.main__link:focus-visible {
-	outline: 1px solid var(--text-color);
-}
 /* Section */
+
 .section {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
@@ -197,7 +201,15 @@
 	gap: 20px;
 }
 
+.section-alt__body {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-column: 1/-1;
+	gap: 20px;
+}
+
 /* Card */
+
 .card {
 	display: flex;
 	flex-direction: column;
@@ -212,13 +224,7 @@
 	font-weight: normal;
 }
 
-/* ================= */
-.section-alt__body {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column: 1/-1;
-	gap: 20px;
-}
+/* Адптация Section */
 
 @media (max-width: 768px) {
 	.section-alt__body {
@@ -238,8 +244,6 @@
 		grid-column: 1/1;
 	}
 }
-
-/*Умные мысли преследовали меня, но я бы побыстрее ))) дальше бб*/
 
 /* Секция Gallery */
 
@@ -284,6 +288,7 @@
 }
 
 /* Адаптация Gallery */
+
 @media (max-width: 768px) {
 	.gallery {
 		padding-block-start: 86px;
@@ -334,28 +339,20 @@
 		font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 	}
 }
-/* ────────────────────────────────
-───────────────██████████───────
-──────────────████████████──────
-──────────────██────────██──────
-──────────────██▄▄▄▄▄▄▄▄▄█──────
-──────────────██▀███─███▀█────── 
-█─────────────▀█────────█▀──────
-██──────────────────█───────────
-─█──────────────██──────────────
-█▄────────────████─██──████
-─▄███████████████──██──██████ ──
-────█████████████──██──█████████
-─────────────████──██─█████──███
-──────────────███──██─█████──███
-──────────────███─────█████████
-──────────────██─────████████▀
-────────────────██████████
-────────────────██████████
-─────────────────████████
-──────────────────██████████▄▄
-────────────────────█████████▀
-─────────────────────████──███
-────────────────────▄████▄──██
-────────────────────██████───▀
-────────────────────▀▄▄▄▄▀ */
+/* 
+░░░░░░░▄▀▀▀▀█░░░░░░░░░░░░░░░░░░░░
+░░░░░░█▀░░░░█░░░░░░░░░░░░░░░░░░░░
+░░░░░█░░░░░░█▀▀▀▄▄░░░░░░▓░░░░░░░░
+░░░░▄█░░░░░░░░░░░░▀▀▄▄░▓▓▓░░░░░░░
+░░░▄█░░░░░░░░░░░░░░░░░▀▓▓▓▓▀▀▀█░░
+▀▄▄█░░░░░░░░░░░░░░░░▓▓▓▓▓▓▓▓░░█░░
+▀▄█░▀▄░░░░▄▄░░░░░░▓▓▓▓▓▓▓░░▓▓▓▓▓▓
+▄▀█▀▄░░░░███░░░░░░░░░▓▓▓▓▓▓▓▓▓▓▓░
+░▀█▀▄░░░░▀▀░░░░░░░░░▄▄░░░▓▓▓▓▓░░░
+░░▀█░░░░░░░░▄▄░░░░░███░░░░▓▓░█░░░
+░░░▀█░░░░░░█░░▀▄░░░▀▀░░░░░▓░█▀░░░
+░░░░▀█░░░░░░▀▄▄▀░░░░░░░░▀▄░█▀░░░░
+░░░░░░▀█▄░░░░░░░░░░░░░▀▄░░██░░░░░
+░░░░░░░░░▀█▄░░░░░░░░▀▄░░██▀░▀░░░░
+░░░░░░░░░░░░▀▀▄▄▄▄▄▄▄█▀█░░▀▄░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░▀░░░░░░░░ */
