--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,7 +10,7 @@
 	--bg-cover: #000028;
 	--text-color-alt: #000028;
 	--shadow-alt: 2px 2px 0 var(--accent-color);
-	--font-family-base: 'IBM Plex mono', sans-serif;
+	--font-family-base: 'IBM Plex mono', monospace, sans-serif;
 	--shadow: 4px 4px 0 var(--accent-color);
 	--outline-switch-opacity: 1px solid rgba(255, 0, 112, 0.4);
 	--outline-switch: 1px solid rgb(255, 0, 112);
