--- a/styles/dark.css
+++ b/styles/dark.css
@@ -32,6 +32,7 @@
 
 	.page {
 		background-image: url('../images/cover-image-dark.png');
+		background-color: #000028;
 	}
 
 	.header__decoration {
@@ -41,6 +42,7 @@
 
 .theme_dark.page {
 	background-image: url('../images/cover-image-dark.png');
+	background-color: #000028;
 }
 
 .theme_dark .header__decoration {
