--- a/styles/light.css
+++ b/styles/light.css
@@ -32,6 +32,7 @@
 
 	.page {
 		background-image: url('../images/cover-image-light.png');
+		background-color: #fff1f7;
 	}
 
 	.header__decoration {
@@ -41,6 +42,7 @@
 
 .theme_light.page {
 	background-image: url('../images/cover-image-light.png');
+	background-color: #fff1f7;
 }
 
 .theme_light .header__decoration {
